# aegis-rs

./: Cargo.toml  README.md  flake.nix  justfile  release.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yaml  ci.yml  prepare-release.yml
docs/: release.md
res/: aegis_encrypted.json  aegis_plain.json
src/: app.rs  crypto.rs  event.rs  json_output.rs  lib.rs  main.rs  otp.rs  password_input.rs  totp.rs  tui.rs  vault.rs
src/aegis/: mod.rs  totp.rs
src/tui/: app.rs  event.rs  handler.rs  terminal.rs  ui.rs
src/vault/: crypto.rs
