[package]
name = "aegis-rs"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "aegis-rs"
path = "src/bin/cli.rs"

[dependencies]
aes-gcm = "0.10"
arboard = "3.2"
base64 = "0.21"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
color-eyre = "0.6"
console = "0.15"
ctrlc = "3.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
hex = "0.4.3"
libreauth = "0.16.0"
password-hash = "0.5.0"
scrypt = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
