[package]
name = "aegis-rs"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
aegis-vault-utils = { path = "../aegis-vault-utils" }
arboard = "3.2"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
color-eyre = "0.6"
console = "0.15"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ctrlc = "3.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
futures = "0.3.30"
ratatui = "0.26.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
