[package]
name = "aegis-rs"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Aegis compatible OTP generator for the CLI"
repository = "https://github.com/granddave/aegis-rs/"

[dependencies]
aegis-vault-utils = "0.5.0"
arboard = "3.2"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
color-eyre = "0.6"
console = "0.15"
ctrlc = "3.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
